--- a/src/components/tracks/VideoSection.module.css
+++ b/src/components/tracks/VideoSection.module.css
@@ -271,6 +271,7 @@
     transform: rotate(-45deg);
     width: 10px;
     height: 10px;
+    margin-left: -5px;
     border-left: 1.5px solid var(--red);
     border-bottom: 1.5px solid var(--red);
   }
