--- a/src/components/Tabs.module.css
+++ b/src/components/Tabs.module.css
@@ -30,9 +30,15 @@
   font-family: var(--maru-mono);
   text-transform: none;
   color: var(--gray-dark);
+  user-select: none;
 }
 
 .tab:hover {
+  font-weight: 600;
+}
+
+.active {
+  cursor: default;
   font-weight: 600;
 }
 
