Change timeline button borders for readability

--- a/src/components/TimestampTimeline.module.css
+++ b/src/components/TimestampTimeline.module.css
@@ -11,6 +11,8 @@
   display: flex;
   padding: 0;
   cursor: pointer;
+  border-bottom: var(--border-red-light);
+  border-top: var(--border-red-light);
   & span {
     display: flex;
     align-items: center;
