--- a/src/components/challenges/VideoSection.module.css
+++ b/src/components/challenges/VideoSection.module.css
@@ -149,6 +149,9 @@
   color: var(--cyan);
   font-size: var(--maru-small);
   font-family: var(--maru-mono);
+
+  background-color: #fffcfc;
+  background-color: var(--red-lightest);
 }
 
 .partTimeline.hide,
