Improve borders on timestamps
* Fixes the double border issue, and changes color depending on if it's for a Track or Challenge
* `VideoSection` is defined separately for Tracks and Challenges separately, so it changes both
* Keeps the default white background color on Track Stops and Parts respectively

--- a/src/components/TimestampTimeline.module.css
+++ b/src/components/TimestampTimeline.module.css
@@ -11,8 +11,12 @@
   display: flex;
   padding: 0;
   cursor: pointer;
-  border-bottom: var(--border-red-light);
-  border-top: var(--border-red-light);
+  
+  &:first-child {
+    /* border-top will be set by the variant */
+    border-top: none !important;
+  }
+
   & span {
     display: flex;
     align-items: center;
@@ -68,6 +72,10 @@
   & .time {
     color: var(--red);
   }
+
+  & .timestamp {
+    border-top: var(--border-red-light);
+  }
 }
 
 .cyan {
@@ -82,6 +90,10 @@
 
   & .time {
     color: var(--cyan);
+  }
+
+  & .timestamp {
+    border-top: var(--border-cyan-light);
   }
 }
 
