--- a/src/components/TopBar.module.css
+++ b/src/components/TopBar.module.css
@@ -16,11 +16,11 @@
 }
 
 .logo {
-  padding: 0 var(--box-padding);
+  padding: 0 var(--spacing-normal);
 }
 
-.newLogo {
-  width: 40px;
+.logoSvg {
+  height: 32px;
 }
 
 .clock {
@@ -78,6 +78,12 @@
     z-index: 100;
     width: calc(100% - 2 * var(--container-spacing-horizontal));
     border-right: var(--border);
+  }
+}
+
+@media (--small) {
+  .logoSvg {
+    height: 28px;
   }
 }
 
