--- a/src/components/tracks/OverviewTimeline.module.css
+++ b/src/components/tracks/OverviewTimeline.module.css
@@ -36,6 +36,13 @@
   padding: 0;
 }
 
+.chapterListItem {
+  /*
+  CSS 'border' interferes with the track stop lines, so we use a box shadow that matches 'border-red-light'.
+  */
+  box-shadow: 0 -1px 0 rgba(255, 0, 0, 0.1);
+}
+
 .chapterTitle {
   position: relative;
   height: var(--baseline);
