Reset VideoSection background color

--- a/src/components/challenges/VideoSection.module.css
+++ b/src/components/challenges/VideoSection.module.css
@@ -150,7 +150,7 @@
   font-size: var(--maru-small);
   font-family: var(--maru-mono);
 
-  background-color: white;
+  background-color: var(--red-lightest);
 }
 
 .partTimeline.hide,
