--- a/src/components/tracks/VideoSection.module.css
+++ b/src/components/tracks/VideoSection.module.css
@@ -151,7 +151,7 @@
   font-size: var(--maru-small);
   font-family: var(--maru-mono);
 
-  background-color: white;
+  background-color: var(--red-lightest);
 }
 
 .overviewTimeline.hide,
