--- a/src/components/TopBar.module.css
+++ b/src/components/TopBar.module.css
@@ -4,7 +4,8 @@
   position: relative;
   justify-content: space-between;
   background-color: var(--gray-light);
-  color: var(--gray-dark);
+  /* color: var(--gray-dark); */
+  color: var(--text-color);
 }
 
 .logo,
