style: :adhesive_bandage: fixed the background color and linear gradient and text color on track page

--- a/src/components/tracks/Card.module.css
+++ b/src/components/tracks/Card.module.css
@@ -1,7 +1,7 @@
 .root {
   display: flex;
-  color: var(--gray-dark);
-  background-color: white;
+  background-color: var(--background-color);
+  color: var(--text-color);
   height: var(--baseline-8x);
 }
 
@@ -59,11 +59,7 @@
 }
 
 .fadeText {
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 1) 30%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: var(--linear-gradient-on-card);
   position: absolute;
   left: 1px;
   right: 0;
