--- a/src/components/Question.module.css
+++ b/src/components/Question.module.css
@@ -5,7 +5,8 @@
   border-left: var(--border);
   border-bottom: var(--border);
   font-family: var(--maru-mono);
-  color: var(--gray-dark);
+  /* color: var(--gray-dark); */
+  color: var(--text-color);
 }
 
 .summary {
@@ -18,6 +19,7 @@
     font-size: var(--font-reduced);
     padding: 0 calc(var(--box-padding) / 2) 0 var(--box-padding);
     font-weight: 400;
+    color: var(--text-color);
   }
 }
 
@@ -51,7 +53,8 @@
       position: absolute;
       left: calc(-1.5 * var(--box-padding));
       content: "\2022";
-      color: var(--gray-dark);
+      /* color: var(--gray-dark); */
+      color: var(--text-color);
       display: inline-block;
       width: var(--box-padding);
     }
@@ -77,7 +80,7 @@
 
 .open {
   height: auto;
-  background-color: white;
+  background-color: var(--background-color);
   & .summary h3 {
     font-weight: bolder;
   }
@@ -90,7 +93,7 @@
 }
 
 .pink.open {
-  background-color: white;
+  background-color: var(--background-color);
 }
 
 .pink .answer p a {
