style: Updated CSS files to fix text color on tags

--- a/src/components/Tags.module.css
+++ b/src/components/Tags.module.css
@@ -18,7 +18,7 @@
 .tag {
   font-family: var(--maru-mono);
   display: inline-block;
-  color: var(--gray-dark);
+  color: var(--text-color);
 }
 
 .singleLine {
