--- a/src/components/ChallengesPanel.module.css
+++ b/src/components/ChallengesPanel.module.css
@@ -112,7 +112,7 @@
   height: var(--baseline-4x);
   border-bottom: var(--border-cyan);
   border-left: var(--border-cyan);
-  background-color: white;
+  background-color: var(--background-color);
   overflow-x: hidden;
   overflow-y: auto;
 
