--- a/src/components/VideoCard.module.css
+++ b/src/components/VideoCard.module.css
@@ -192,7 +192,7 @@
   max-height: var(--baseline-box-5x);
   overflow: hidden;
   text-overflow: ellipsis;
-  background-color: white;
+  background-color: var(--background-color);
 }
 
 .right {
