--- a/src/components/tracks/VideoSection.module.css
+++ b/src/components/tracks/VideoSection.module.css
@@ -14,7 +14,7 @@
   height: var(--baseline-2x);
   border-bottom: var(--border-red);
   border-left: var(--border);
-  background: white;
+  background-color: var(--background-color);
 }
 
 .title h1,
@@ -69,6 +69,7 @@
 
 .share {
   display: none;
+  background-color: var(--background-color);
 }
 
 .video {
@@ -125,7 +126,7 @@
     font-family: var(--maru-mono);
     font-size: var(--maru-medium);
     color: var(--red);
-    background-color: white;
+    background-color: var(--background-color);
     text-transform: uppercase;
   }
 
@@ -137,11 +138,12 @@
 
 .clickable button {
   cursor: pointer;
+  background-color: var(--background-color);
 }
 
 .selected button {
   background-color: var(--red-light);
-  color: var(--gray-dark);
+  color: var(--text-color);
 }
 
 /* Timeline section */
@@ -197,7 +199,7 @@
   .share {
     display: block;
     border-bottom: var(--border-red);
-    background: white;
+    background-color: var(--background-color);
   }
 
   .videoWrapper {
@@ -227,7 +229,7 @@
     width: 100vw;
     padding: 0 var(--container-spacing-horizontal);
     z-index: 100;
-    background: white;
+    background: var(--background-color);
   }
 
   .timelinesToggle {
@@ -259,10 +261,12 @@
     width: 60px;
     display: flex;
     justify-content: center;
+    color: var(--text-color);
   }
 
   .back {
     display: none;
+    color: var(--text-color);
   }
 
   .arrow:before {
