--- a/src/components/tracks/Card.module.css
+++ b/src/components/tracks/Card.module.css
@@ -135,6 +135,7 @@
   height: var(--baseline);
   padding: 0 var(--box-padding);
   line-height: var(--baseline);
+  color: var(--text-color);
 }
 
 .expand {
@@ -157,7 +158,7 @@
   height: var(--baseline);
   padding: 0 var(--box-padding);
   background: var(--red-light);
-  color: var(--gray-dark);
+  color: var(--text-color);
   font-size: var(--maru-normal);
   line-height: var(--maru-normal-line-height);
   & * + * {
