quick css cleanup

--- a/src/components/Tabs.module.css
+++ b/src/components/Tabs.module.css
@@ -29,7 +29,6 @@
   cursor: pointer;
   font-family: var(--maru-mono);
   text-transform: none;
-  /* color: var(--gray-dark); */
   color: var(--text-color);
   user-select: none;
 }
@@ -41,6 +40,11 @@
 .active {
   cursor: default;
   font-weight: 600;
+}
+
+.active,
+.tab:hover {
+  color: var(--text-color) !important;
 }
 
 .component {
@@ -74,7 +78,6 @@
   & .tab:hover,
   & .active {
     background-color: var(--red-light);
-    color: var(--text-color);
   }
 }
 
@@ -92,8 +95,6 @@
   & .tab:hover,
   & .active {
     background-color: var(--cyan-light);
-    /* color: var(--gray-dark); */
-    color: var(--text-color);
   }
 }
 
