--- a/src/styles/pages/index.module.css
+++ b/src/styles/pages/index.module.css
@@ -210,7 +210,6 @@
 
 .trackCard .date {
   background-color: var(--red-light);
-  /* color: var(--gray-dark); */
   color: var(--text-color);
   border-bottom: var(--border-red);
   border-left: var(--border-red);
@@ -218,7 +217,6 @@
 
 .challengeCard .date {
   background-color: var(--cyan-light);
-  /* color: var(--gray-dark); */
   color: var(--text-color);
   border-bottom: var(--border-cyan);
   border-left: var(--border-cyan);
@@ -257,20 +255,18 @@
   height: var(--baseline-3x);
   border-left: var(--border);
   border-bottom: var(--border-purple);
-  /* background: white; */
+  background-color: var(--background-color);
   color: var(--text-color);
 
   & p,
   & address {
     margin: 0;
     padding: 0 var(--box-padding);
-    /* color: var(--gray-dark); */
   }
 
   & .videoTitle {
     text-transform: uppercase;
     font-size: var(--maru-normal);
-    /* color: var(--gray-mid); */
   }
 
   & .showcaseTitle {
@@ -278,14 +274,12 @@
     font-size: var(--maru-xlarge);
     line-height: var(--maru-xlarge-line-height);
     font-weight: bold;
-    /* color: var(--text-color); */
   }
 }
 
 .showcase .author {
   font-family: var(--maru-mono);
   font-style: normal;
-  /* color: var(--gray-dark); */
   color: var(--text-color);
   padding: 0 var(--box-padding);
   margin: 0;
@@ -338,7 +332,6 @@
   border-left: var(--border-pink);
   line-height: var(--baseline-box);
   font-size: var(--maru-large);
-  /* color: var(--gray-dark); */
   color: var(--text-color);
   background-color: var(--pink-tint);
   text-transform: uppercase;
@@ -346,7 +339,6 @@
 
 .event {
   display: flex;
-  /* color: var(--gray-dark); */
   color: var(--text-color);
   & p {
     margin: 0;
